fix datepicker behind map

--- a/agni/web/static/agni_map.css
+++ b/agni/web/static/agni_map.css
@@ -29,7 +29,6 @@ head {
 
 #mapdisplay {
 	height: 100%;
-	z-index: 0;
 }
 
 @media screen and (max-width: 600px){
